ptit travail pendant seance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ find_package(Imagine REQUIRED)
 
 project(Choose_your_opponent)
 
-add_executable(Choose_your_opponent main.cpp tools.cpp DoubleTree.cpp json.cpp)
+add_executable(Choose_your_opponent main.cpp tools.cpp DoubleTree.cpp json.cpp official.cpp)
 
 
 
